# fithofupro

./: .gitignore  CMakeLists.txt  README.md
res/: resources.qrc
share/: fithofupro.desktop
src/: macro.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  projectfoldermodel.cpp  projectfoldermodel.h  projectfolderreadtask.cpp  projectfolderreadtask.h  projectfoldertype.h
